non-compatible/tests/ecc-aws-146-no_acls_allow_ingress_for_everyone_to_remote_server_administration_ports/placebo-red/ec2.DescribeNetworkAcls_1.json
{
    "status_code": 200,
    "data": {
        "NetworkAcls": [
            {
                "Associations": [],
                "Entries": [
                    {
                        "CidrBlock": "0.0.0.0/0",
                        "Egress": true,
                        "Protocol": "-1",
                        "RuleAction": "deny",
                        "RuleNumber": 32767
                    },
                    {
                        "CidrBlock": "0.0.0.0/0",
                        "Egress": false,
                        "PortRange": {
                            "From": 22,
                            "To": 22
                        },
                        "Protocol": "6",
                        "RuleAction": "allow",
                        "RuleNumber": 1
                    },
                    {
                        "CidrBlock": "0.0.0.0/0",
                        "Egress": false,
                        "PortRange": {
                            "From": 3389,
                            "To": 3389
                        },
                        "Protocol": "6",
                        "RuleAction": "allow",
                        "RuleNumber": 2
                    },
                    {
                        "CidrBlock": "0.0.0.0/0",
                        "Egress": false,
                        "Protocol": "-1",
                        "RuleAction": "deny",
                        "RuleNumber": 32767
                    }
                ],
                "IsDefault": true,
                "NetworkAclId": "acl-0202ea11e25b41c54",
                "Tags": [
                    {
                        "Key": "CustodianRule",
                        "Value": "epam-aws-146-no_acls_allow_ingress_0.0.0.0/0_to_remote_server_administration_ports"
                    },
                    {
                        "Key": "Name",
                        "Value": "146_default_network_acl_red"
                    },
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Red"
                    }
                ],
                "VpcId": "vpc-0e919101a43a05760",
                "OwnerId": "this"
            }
        ],
        "ResponseMetadata": {}
    }
}
